assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Economica:wght@700&family=Merriweather&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    margin: auto 7%;
    padding: 32px;
    font-family: merriweather, sans-serif;
    background-color: #FFFFFF;
    background-image: linear-gradient(180deg, #FFFFFF 0%, #6284FF 40%, #921e1e 100%);

}

#logo-navigation {
    text-align: center;
}

h1, h2, h3 {
    font-family: economica, sans-serif;
}

/*logo and navigation*/

#logo {
    font-size: 48px;
    text-transform: uppercase;
    margin: auto 30%;
}

#logo a {
    text-decoration: none;
    color: #e85c23;
    text-shadow: 1px 1px 0 #000;
}

#navigation {
    font-family: economica, sans-serif;
    list-style-type: none;
    border: 3px solid rgba(2, 2, 2, 0.5);
    border-radius: 50px;
    margin-top: 15px;
    padding: 0.5%;
    background-color: rgb(0,0,0,.5);
}

nav a {
    text-decoration: none;
    color: white;
    font-size: xxx-large;
}

nav ul > li {
    display: inline-block;
    padding: 0 65px;
}

#navigation a:hover {
    color: #e7c17c;
    border-bottom: 2px solid #e7c17c;
}

.active {
    color: #e7c17c;
    border-bottom: 2px solid #e7c17c;
}

/*home page images and text*/

.home-image {
    width: 600px;
    height: 350px;
    display: inline-block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 15px;
}

#center {
    text-align: center;
}

.short {
    margin-top: 15px;
    font-size: x-large;
}

/*Opening hours*/

.times {
    font-size: larger;
    width: 400px;
    margin-top: 15px;
    clear: both;
}

.times th {
    text-align: left;
    font-size: larger;
}

.times td {
    font-size: larger;
}

#opening-hours {
    margin-top: 8%;
}

#opening-hours p {
    float: right;
}

#opening-hours h2 {
    font-size: 58px;
}

.align-left {
    float: left;
    margin-top: 10px;
    border: 1px solid;
    border-radius: 25px;
    padding: 20px;
    background-color: #ffffff18;
}

.footer-home {
    clear: both;
}

/*what people say*/

.align-right {
    float: right;
    margin-top: 10px;
    border: 1px solid;
    border-radius: 25px;
    padding: 20px;
    background-color: #ffffff18;
    
}

.opinion {
    clear: both;
    border: 1px solid;
    border-radius: 10px;
    padding: 8px 10px;
    background-color: #ffffff33;
}

aside > h2 {
    text-align: right;
    font-size: 58px !important;
}

.topmargin {
    margin-top: 30px;
    border: 1px solid;
    border-radius: 10px;
    padding: 5px 8px;
    background-color: #6284FF;
}

.topmargin2 {
    margin-top: 30px;
    clear: right;
    border: 1px solid;
    border-radius: 10px;
    padding: 5px 8px;
    background-color: #6284FF;
}

aside .opinion {
    font-size: 25px;
    text-align: right;
}

/*burger menu*/

.burger-menu {
    font-size: 78px;
    margin-top: 75px;
    text-align: center;
}

#menu-placement {
    margin-top: 100px;
}

#menu-placement p {
    font-size: larger;
}

img.left-align {
    float: left;
    margin-right: 10px;
}

img.right-align {
    float: right;
    margin-left: 10px;
}

img.menu-img {
    width: 250px;
    height: 250px;
    border: 1px solid;
    border-radius: 88px;
}

.menu-left > p {
    float: left;
    margin-top: 25px;
    border: 1px solid;
    padding: 10px 25px;
    border-radius: 25px;
    background-color: rgba(255, 255, 255, 0.315);
}

.menu-right > p {
    float: right;
    margin-top: 25px;
    border: 1px solid;
    padding: 10px 25px;
    border-radius: 25px;
    background-color: rgba(255, 255, 255, 0.315);
}

/*about*/

#center-about {
    text-align: center;
}

#about-us {
    font-size: 78px;
    margin-top: 75px;
    margin-bottom: 36px;
}

.about-us-text p {
    font-size: x-large;
    padding: 0 150px;
    margin: 50px 0;
}

.about-border {
    margin: auto 65px;
    border: 1px solid;
    border-radius: 75px;
    background-color: rgba(255, 255, 255, 0.226);
}

.video {
    margin-bottom: 35px;
    width: 700px;
    height: 394px;
}

/*gallery*/

#gallery-photos {
    line-height: 0;
    column-count: 3;
    column-gap: 0;
    margin-top: 25px;
}

#gallery-photos > img {
    width: 100%;
}

/*contact*/

#contact {
    font-size: 78px;
    margin-top: 75px;
    margin-bottom: 36px;
    text-align: center;
}

#contact-form {
    width: 50%;
    border: 2px solid;
    border-radius: 20px;
    padding: 15px;
    margin: auto;
    text-align: center;
    font-size: x-large;
    background-image: url(../images/gallery/guy-holds-plate.jpg);
    background-size: cover;
    background-position: center;
    display: table;
}

#contact-form label {
    margin-top: 10px;
    color: whitesmoke;
}

.text-input {
    width: 90%;
    padding: 10px;
    font-size: 18px;
    border: 2px solid;
    border-radius: 5px;
    opacity: 85%;
}

form #topic {
    width: 50%;
    border: 2px solid;
    border-radius: 5px;
    padding: 8px;
    font-size: 20px;
    opacity: 85%;
}

form #message {
    width: 90%;
    height: 150px;
    padding: 10px;
    font-size: 18px;
    border: 2px solid;
    border-radius: 5px;
    resize: none;
    opacity: 85%;
}

form #send-message {
    width: 95px;
    font-size: 18px;
    border: 2px solid;
    border-radius: 5px;
    padding: 5px;
    opacity: 85%;
}

label {
    display: block;
}

.text-input:hover {
    border-color: #e84407;
}

form #topic:hover {
    border-color: #e84407;
}

form #message:hover {
    border-color: #e84407;
}

form #send-message:hover {
    color: #e84407;
}

iframe {
    width: 100%;
    margin-top: 15px;
}

#adress-map h3 {
    font-size: 78px;
    margin-top: 88px;
}

#adress-map p {
    font-size: x-large;
}

#adress-map > .adress {
    text-align: center;
}

.map {
    border: 1px solid;
    border-radius: 20px;
}

/*thank you message*/

#thank-you {
    text-align: center;
}

#thank-you h2 {
    font-size: 78px;
    margin-top: 75px;
}

#thank-you p {
    font-size: x-large;
    margin-top: 25px;
    margin-bottom: 406px;
}

/*footer*/

.social-networks {
    text-align: center;
}

.social-networks > li {
    display: inline;
}

.social-networks i {
    font-size: 24px;
    margin: 3%;
    padding: 1%;
    color: #130f0f;
}

.menu-footer {
    clear: both;
}

/*404 error*/

#error-404 {
    text-align: center;
    margin: 50px 20% 275px;
    padding: 40px;
    border: 1px solid;
    border-radius: 75px;
    background-color: rgba(255, 255, 255, 0.226);
}

.text-404 {
    font-size: 75px;
    text-transform: uppercase;
    margin-bottom: 35px;
}

.home-404 {
    text-decoration: none;
    border-radius: 25px;
    padding: 10px;
    color: rgb(255, 255, 255);
    background-color: #e843078c;
}

.home-404:hover {
    background-color: #921e1ed5;
}

/*media queries*/

/*for larger screens 1500px wide and down*/

@media screen and (max-width: 1500px) {

    nav ul > li {
        padding: 0 35px;
    }

    .home-image {
        width: 434px;
        height: 234px;
    }

    #logo {
        font-size: 38px;
    }

    #contact-form {
        width: 70%;
    }
}

/*for large/medium screens 1115px wide and down*/

@media screen and (max-width: 1115px) {

    body {
        margin: auto 1%;
        padding: 20px;
    }

    #contact-form {
        width: 70%;
    }
}

/*for medium screens 930px wide and down*/

@media screen and (max-width: 930px) {

    body {
        margin: auto 0.8%;
        padding: 4px;
    }

    .home-image {
        width: 290px;
        height: 150px;
    }

    .about-us-text p {
        padding: 0 50px;
        margin: 30px 0;
    }

    .about-border {
        margin: auto 35px;
    }

    .about-img {
        width: 400px;
        height: 265px;
    }

    .video {
        width: 400px;
        height: 225px;
    }

    #gallery-photos {
        column-count: 2;
    }

    #contact-form {
        width: 80%;
    }

    .text-404 {
        font-size: 45px;
    }
}

/*for small screens 620px wide and down*/

@media screen and (max-width: 620px) {

    body {
        margin: auto 0.4%;
        padding: 2px;
    }

    #logo {
        font-size: 18px;
    }

    #opening-hours h2 {
        font-size: 48px;
    }

    .times {
        font-size: medium;
        width: 250px;
    }

    .about-img {
        width: 250px;
        height: 175px;
    }

    .video {
        width: 250px;
        height: 141px;
    }

    .about-border {
        margin: auto 15px;
    }

    .about-us-text p {
        font-size: large;
        padding: 0 25px;
    }

    .burger-menu {
        font-size: 58px;
    }

    #menu-placement {
        margin-top: 50px;
    }
    
    #gallery-photos {
        column-count: 1;
    }

    form #topic {
        width: 70%;
    }

    .text-404 {
        font-size: 35px;
    }

    #error-404 {
        margin: 50px 10% 200px;
    }
}

